--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   shared_preferences: ^2.2.3  # ✅ Adicionado para salvar a escolha do usuário
   flutter_localizations:
     sdk: flutter
-  intl: 0.19.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
