--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
