--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   smooth_page_indicator: ^1.1.0
+  fl_chart: ^0.62.0
 
 dev_dependencies:
   flutter_test:
