--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   shared_preferences: ^2.2.3  # ✅ Adicionado para salvar a escolha do usuário
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: any
   smooth_page_indicator: ^1.1.0
   fl_chart: ^0.63.0
 
