--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,3 +31,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/placeholder.png
+localizations:
+  arb-dir: lib/l10n
+  template-arb-file: app_en.arb
+  output-localization-file: app_localizations.dart
+  output-class: AppLocalizations
+  supported-locales:
+    - en
+    - pt
