faltou uma coisa apos o erro do deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "flutter pub get && flutter gen-l10n && flutter build web --release",
+  "installCommand": "if [ ! -d \"flutter\" ]; then git clone https://github.com/flutter/flutter.git; fi && export PATH=\"$PWD/flutter/bin:$PATH\" && flutter upgrade && flutter doctor && flutter clean && flutter config --enable-web && flutter pub get && flutter gen-l10n && flutter build web --release",
+  "buildCommand": "",
   "outputDirectory": "build/web"
 }
