--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/placeholder.png
-localizations:
+
+flutter_gen-l10n:
   arb-dir: lib/l10n
   template-arb-file: app_en.arb
   output-localization-file: app_localizations.dart
