--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
-  "buildCommand": "flutter pub get && flutter gen-l10n && flutter build web --release",
+  "installCommand": "bash install_flutter.sh",
+  "buildCommand": "export PATH=\"$PWD/flutter/bin:$PATH\" && flutter build web --release",
   "outputDirectory": "build/web"
 }
+
+
