--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   shared_preferences: ^2.2.3  # ✅ Adicionado para salvar a escolha do usuário
   flutter_localizations:
     sdk: flutter
-  intl: any
+  #  intl: any
   smooth_page_indicator: ^1.1.0
   fl_chart: ^0.63.0
 
@@ -26,13 +26,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/placeholder.png
-
-generate-l10n:
-  arb-dir: lib/l10n
-  template-arb-file: app_en.arb
-  output-localization-file: app_localizations.dart
-  output-class: AppLocalizations
-  preferred-supported-locales:
-    - en
-    - pt
-    - es
