--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   #  intl: any
   smooth_page_indicator: ^1.1.0
   fl_chart: ^0.63.0
+  stomp_dart_client: ^0.4.4
 
 flutter:
   generate: true
