--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   fl_chart: ^0.63.0
   stomp_dart_client: ^0.4.4
+  flutter_local_notifications: ^17.0.0
 
 flutter:
   generate: true
