--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   fl_chart: ^0.63.0
   stomp_dart_client: ^0.4.4
   flutter_local_notifications: ^17.0.0
+#  go_router: ^13.0.0
+#  flutter_web_plugins:
+#    sdk: flutter
 
 flutter:
   generate: true
