--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 #  flutter_web_plugins:
 #    sdk: flutter
   signature: ^5.3.0
+  flutter_animate: ^4.2.0
 
 flutter:
   generate: true
