--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
 #    sdk: flutter
   signature: ^5.3.0
   flutter_animate: ^4.2.0
+  http_interceptor: ^1.0.2
 
 flutter:
   generate: true
